# MEMEz

./: .replit  README.md  pyproject.toml  requirements.txt
bot/: bot.py  run.py
bot/Assets/cmds/: cmds.py
bot/Editor/: Editor.py
bot/cogs/: help.py  memeEditor.py  redditFetcher.py  settings.py
bot/settings/: defaultSettings.py  settingsManager.py
