[tool.poetry]
name = "repl_python3_MEMEz"
version = "0.1.0"
description = ""
authors = ["cooldude069 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pymongo = "^3.12.0"
python-dotenv = "^0.19.0"
Flask = "^2.0.1"
asyncpraw = "^7.4.0"
dnspython = "^2.1.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
